src/test/deca/codegen/interactive/invalid/07readFloatInt.deca
// Description:
//  readFloat avec un int 
//
// Resultats:
//  07readFloatInt.expected
// 
// Historique:
//    cree le 10/06/2022

{
    float x = readFloat();
}